Fix navbar spacing

--- a/src/app/navbar/navbar.scss
+++ b/src/app/navbar/navbar.scss
@@ -1,8 +1,9 @@
-$primary: blue;
+$primary: #3880BF;
 $secondary: #44B894;
 
 $animation-duration: 0.25s;
 .navbar {
+  //padding-top: 0.7rem;
   width: 100%;
   height: 80px;
   background: white;
@@ -13,10 +14,11 @@ $animation-duration: 0.25s;
     color: $primary;
     font-weight: 800;
     img {
-      height: 60px;
+      height: 56px;
     }
   }
   .nav-item {
+    margin-top: 0.5rem;
     transition: all 0.1s ease-in-out;
     a {
       cursor: pointer;
@@ -53,7 +55,7 @@ $animation-duration: 0.25s;
     }
     .icon-bar {
       display: block;
-      background-color: black;
+      background-color: $primary;
       width: 32px;
       height: 3px;
       border-radius: 3px;
